# strike

./: .gitignore  .xpmignore  AUTHORS  CHANGES  INSTALL  INSTALL.md  LICENSE  Makefile.am  README.md  Rakefile  array.3  array.3.html  array.3.markdown  array.3.ronn  assert.1  assert.1.html  assert.1.markdown  assert.ronn  bake  bake.1  bake.1.html  bake.1.markdown  bake.1.ronn  bake.ronn  boilerplate.1  boilerplate.1.html  boilerplate.1.markdown  boilerplate.1.ronn  boilerplate.3  boilerplate.3.html  boilerplate.3.markdown  boilerplate.3.ronn  boilerplate.ronn  build.xml  configure.ac  console.3  console.3.html  console.3.markdown  console.3.ronn  delegate.3  (+107 more)
doc/: .gitignore  assert.1.ronn  bake.1.ronn  boilerplate.1.ronn  boilerplate.3.ronn  http.1.ronn  index.html  index.txt  rest.1  rest.1.html  rest.1.ronn  strike.1.ronn
doc/assets/css/: doc.css  style.css
doc/latex/: test.tex
doc/man/: array-file.3  array.3  bake.1  boilerplate.3  console.3  delegate.3  executable.3  git.3  globals.3  help.3  http.3  json.3  manual.1  prompt.1  prompt.3  require.3  semver.3  strike-credits.7  strike-tree.7  strike.7  task-ant.7  task-archive.7  task-clean.7  task-compress.7  task-deploy-json.7  task-deploy.7  task-devel.7  task-doc.7  task-expand.7  task-latex.7  task-ls.7  task-module.7  task-project.7  task-semver.7  task-todo.7  version.3
doc/man/man1/: console.1  prompt.1
doc/man/man3/: git.3  globals.3  http.3  sprintf.3
doc/man/man7/: strike.7  task-ant.7  task-deploy.7  task-devel.7  task-doc.7  task-expand.7  task-ls.7  task-make.7  task-module.7  task-mvn.7  task-rake.7  task-test.7
doc/md/: installation.md
doc/md/man/man1/: bake.1.md  console.1.md  manual.1.md  prompt.1.md
doc/md/man/man3/: array-file.3.md  array.3.md  boilerplate.3.md  console.3.md  delegate.3.md  executable.3.md  git.3.md  globals.3.md  help.3.md  http.3.md  json.3.md  prompt.3.md  require.3.md  semver.3.md  sprintf.3.md  version.3.md
doc/md/man/man7/: strike.7.md  (+21 more)
doc/ronn/: array.3.ronn  bake.1.ronn  boilerplate.3.ronn  console.1.ronn  console.3.ronn  git.3.ronn  help.3.ronn  manual.1.ronn  prompt.3.ronn  require.3.ronn  strike-credits.7.ronn  strike-tree.7.ronn  task-ant.7.ronn  task-archive.7.ronn  task-clean.7.ronn  task-compress.7.ronn  task-deploy.7.ronn  task-devel.7.ronn  task-expand.7.ronn  task-latex.7.ronn  task-ls.7.ronn  task-make.7.ronn  task-module.7.ronn  task-project.7.ronn  task-test.7.ronn  version.3.ronn
etc/json-checker/: utf8_to_utf16.h
install/: install.sh  test  test.sh
lib/: archive-util  boilerplate.sh  clean-util  constants  core  exit-codes  fs  git-util  globals  help  messages  module  shared  shared-deprecated.sh  strike.sh  style  sysout  utilities
lib/json-checker/: JSON_checker.c  JSON_checker.h  main.c  utf8_decode.c
lib/modules/: array  aspect  assert  attr  boilerplate  color  console  couchdb  crypto  crypto.sh  delegate  executable  fs  git  git.sh  globals  help  help.sh  http  inet  json  json.parse  json.stringify  main  method  options  process  prompt  require  rest  semver  semver.sh  sprintf  stack  string  system  url  variable  welcome
lib/modules/array/: file  file.sh
lib/modules/command/: find
lib/modules/core/: array  console  console.sh  delegate  delegate.sh  executable  executable.sh  fs  fs.sh  globals  globals.sh  method  method.sh  process  process.sh  prompt  prompt.sh  require  require.sh  sprintf  sprintf.sh  string  string.sh  system  variable  variable.sh
lib/modules/doc/: array-file.3.ronn  bake.1.ronn  boilerplate.3.ronn  console.3.ronn  delegate.3.ronn  executable.3.ronn  git.3.ronn  globals.3.ronn  http.3.ronn  json.3.ronn  manual.1.ronn  prompt.1.ronn  prompt.3.ronn  rest.1.ronn  semver.3.ronn  sprintf.3.ronn  strike-tree.7.ronn  strike.7.ronn  task-ant.7.ronn  task-deploy-json.7.ronn  task-deploy.7.ronn  task-doc.7.ronn  task-mvn.7.ronn  task-rake.7.ronn  task-semver.7.ronn  task-test.7.ronn  task-todo.7.ronn
lib/modules/json/: json  json.parse  json.sh  json.stringify  json.stringify.sh
lib/modules/net/: http  http.sh  inet.sh  url  url.sh
lib/modules/opts/: help.sh  version  version.sh
lib/modules/tasks/: ant  archive  archive.sh  assert  clean  clean.sh  compress  compress.sh  deploy  dev  devel  devel.sh  doc  doc.sh  expand  expand.sh  latex  latex.sh  list  ls  ls.sh  module  module.sh  npm  project  project.sh  rake  semver  semver-git.sh  semver.sh  test  test.sh  todo  todo.sh  util.sh
lib/modules/util/: README.md  checksum  checksum.sh  couchdb.sh  find  find.sh
lib/rlx/: common
lib/rlx/commands/: shell
man/: array-file.3  array.3  assert.1  assert.7  bake.1  boilerplate.3  console.1  console.3  delegate.3  doc.7  executable.3  executable.7  git.3  globals-api.3  globals.3  help.3  help.7  http.1  http.3  json.3  manual.1  prompt.1  prompt.3  require.3  rest.1  rest.1.ronn  rlx.1  semver.3  sprintf.3  strike-credits.7  strike-tree.7  strike.1  strike.7  task-ant.7  task-archive.7  task-assert.7  task-clean.7  task-compress.7  task-deploy-json.7  task-deploy.7  (+14 more)
test/: array.test  attr.test  console.test  executable.test  fail-copy-file  fail-expand-path  fail-find-git-tag  fail-symlink-file  fail-verify-programs  fail-verify-shell  json.checker.test  json.parse.test  json.stringify.test  json.test  jsonlint.test  latex.test  process.test  require.test  semver.test  stack.test  string.test  task-test.test  test-copy-file  test-expand-path  test-find-git-tag  test-symlink-file  test-verify-programs  test-verify-shell  variable  variable.test
test/archive/: .gitignore  archive.test
test/archive/lipsum/: lipsum.dir.txt
test/compress/: .gitignore  compress.test
test/deploy/: deploy.test
test/deploy/project/: .gitignore  README.md  bundle-scripts.json  custom-install.sh  default.json  deploy-git.json  deploy-multiple.json  deploy-npm.json  deploy-tar.json  deploy.json  env.json  package.json
test/json/pretty/: array.json  array.tab.json  object.json  object.tab.json  project.json
test/json/valid/: many_object.parsed  string_in_object.parsed
test/lib/: dir
test/modules/: say
(+14 files in other folders)
